# rust_snippets

./: Cargo.toml
app/: Cargo.toml
async/: Cargo.toml
basic/: Cargo.toml
basic/src/: enum.rs  generic_type.rs  ownership.rs  panic.rs  reference.rs  struct.rs  traits.rs  variable.rs
collection/: Cargo.toml
collection/src/: vector.rs
datastructure/: Cargo.toml
datastructure/src/: graph.rs
gui/: Cargo.toml
gui/src/: painter.rs  panel.rs
logging/: Cargo.toml
logging/src/: format_logger.rs  simple_logger.rs
memory/: Cargo.toml
memory/src/: smart_pointer.rs
