[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "slice"
path = "src/slice.rs"

[[bin]]
name = "panic"
path = "src/panic.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"
